# JJClawler-full

./: .gitignore  API.md  API.yaml  API_ENDPOINTS.md  CLAUDE.md  README.md  pyproject.toml  task_records.json
backend/: .dockerignore  .env.example  .gitignore  API.yaml  CLAUDE.md  CRAWLER_DATA_STORAGE.md  Dockerfile  NEW_ENDPOINTS.md  README.md  create_crawl_task_table.py  deploy.sh  docker-compose.yml  example_crawler_usage.py  manual_jiazi_crawl.py  manual_page_crawl.py  migrate_database.py  migrate_field_names.py  migrate_nutrition_fields.py  poetry.toml  pyproject.toml  requirements.txt  run_all_crawlers.py  task_records.json  test.db  test_crawler.py  test_main.http
backend/.claude/: settings.local.json
backend/app/: __init__.py  config.py  crawl_config.py  logger.py  main.py  middleware.py  schedule.py  utils.py
backend/app/api/: __init__.py  books.py  crawl.py  pages.py  rankings.py  reports.py  schedule.py  stats.py  users.py
backend/app/crawl/: __init__.py  base.py  circuit_breaker.py  crawl_config.py  crawl_flow.py  crawl_task.py  crawler.py  http.py  http_client.py  jiazi_parser.py  manager.py  nested.py  page_parser.py  parser.py  result_models.py
backend/app/database/: __init__.py  async_connection.py  connection.py  migrate.py
backend/app/middleware/: __init__.py  exception_middleware.py
backend/app/models/: __init__.py  base.py  book.py  crawl.py  error.py  ranking.py  schedule.py
backend/app/modules/: __init__.py  base.py
backend/app/schedule/: __init__.py  context.py  handlers.py  listener.py  result.py  scheduler.py
backend/app/tests/: conftest.py  test_data_consistency.py  test_integration.py  test_main.py  test_performance.py
backend/app/utils/: __init__.py  data_utils.py  db_utils.py  error_codes.py  failure_storage.py  file_utils.py  http_client.py  log_utils.py  number_utils.py  response_utils.py  service_utils.py  time_utils.py  transform_utils.py
backend/data/: jjcrawler.db.backup_field_migration  urls.json  urls_old.json
backend/data/example/: gywx_example.json  index_example.json  jiazi_example.json  yq_example.json
backend/data/failures/: failures.json
backend/docker/: Dockerfile  QUICK_START.md  README.md  deploy.sh  docker-compose.nginx.yml  docker-compose.yml  nginx.conf
backend/docs/: API.md  DESIGN.md  SCHEDULER_DESIGN.md  SCHEDULE_MODULE_SUMMARY.md  book_trend_api_usage.md  crawler-operation-guide.md  docker-deployment-guide.md  docker-deployment.md  domain-deployment.md  issues.md  production-operations.md  scheduler-operations.md
backend/nginx/: work.guliyu.top.conf
backend/scripts/: database_update.py  tools.py
backend/tests/: conftest.py  test_config.py  test_crawler.py  test_integration.py
backend/tests/crawler/: README.md  __init__.py  conftest.py  test_integration_real.py  test_migration_summary.md  test_page_crawler.py  test_parser.py
backend/tests/test_api/: __init__.py  conftest.py  test_books.py  test_books_api.py  test_crawl.py  test_crawl_api.py  test_health.py  test_pages.py  test_rankings.py  test_rankings_api.py  test_schedule.py  test_schedule_api.py
backend/tests/test_config/: conftest.py  test_config.py
backend/tests/test_crawl/: README.md  __init__.py  conftest.py  test_base.py  test_crawl_base.py  test_crawl_flow.py  test_http.py  test_manager.py  test_parser.py
backend/tests/test_crawler/: test_crawler.py
backend/tests/test_database/: README.md  __init__.py  conftest.py  (+11 more)
(+214 files in other folders)
