[project]
name = "jjclawler-full"
version = "0.1.0"
description = ""
authors = [
    {name = "lien",email = "38693632+lien-Gu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
