[project]
name = "jjcrawler"
version = "0.1.0"
description = "晋江文学城爬虫后端项目"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "httpx>=0.28.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.6.0",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.41",
    "aiosqlite>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.7.0",
    "pytest-mock>=3.14.1"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"