[project]
name = "jjcrawler"
version = "0.1.0"
description = "晋江文学城爬虫后端项目"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "sqlmodel>=0.0.24",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "pydantic-settings>=2.10.1",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.41",
    "aiosqlite>=0.21.0",
    "starlette>=0.47.2",
    "apscheduler==3.10.4",
    "tenacity>=9.1.2",
    "loguru>=0.7.3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.5",
]
